# booking-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
booking_service/: datadump.json  urls.py  wsgi.py
booking_service/booking_service/: asgi.py  settings.py  urls.py
booking_service/hotel_numbers/: admin.py  forms.py  models.py  urls.py  views.py
booking_service/hotel_numbers/migrations/: 0001_initial.py  0002_hotels_alter_rooms_options_remove_rooms_date_booked_and_more.py
booking_service/hotel_numbers/templates/hotel_numbers/: hotel_detail.html  hotel_list.html  main.html  room_list.html  room_preview.html
booking_service/templates/: base.html
hotel_numbers/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  urls.py  views.py
hotel_numbers/templates/hotel_numbers/: categories.html  hotel_detail.html  main.html  room_preview.html
hotel_numbers/tests/: test_api.py  test_forms.py  test_models.py
templates/: base.html
